--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       src="https://scontent.frba2-2.fna.fbcdn.net/v/t1.0-1/p160x160/15976947_1235052343237792_1539376455498490733_n.jpg?_nc_cat=101&_nc_oc=AQkf02KlSxKOUD_pSAOFVq_Q831T5iZf2RSMbqUtH6nwe5flSVc24pE5Sl9m2KRu_dU&_nc_ht=scontent.frba2-2.fna&oh=8cc4e4b8e2ab60dd5818a991ae5bcc27&oe=5E3D33F9"
       alt="jalal in tubkal"></td>
       <td><h1>Naji Jalal</h1>
-      <p><em>Future Student at the <strong><a href="https://1337.ma">1337</a>coding school</strong>.</em></p>
+        <p><em>Future Student </p>
       <p>I'm a current student at <a href="http://www.fpl.ac.ma/site/">the polydisciplanery faculty of Larache</a> who just
       knew that he like coding , I'm learning now how to build my own site web page with html.</p></td>
   </table>
